<resources>
    <string name="app_name">WeatherApp</string>
    <string name="display_temperature">%1$.0f°</string>
    <string name="city_name_to_add">City name to add</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="clouds">Clouds</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_degrees">Wind Degrees</string>
    <string name="city_added">City added!</string>
    <string name="city_deleted">City(s) deleted!</string>
    <string name="display_country">(%1$s)</string>
    <string name="display_pressure">%1$d hPa</string>
    <string name="display_percent">%1$d %%</string>
    <string name="display_distance">%1$d m</string>
    <string name="display_speed">%1$.1f m/s</string>
    <string name="display_degree">%1$d°</string>
    <string name="updated">Updated:</string>
</resources>